--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,23 @@
-body{
-  background: rgb(2,0,36);
-background: linear-gradient(146deg, rgba(2,0,36,1) 0%, rgba(47,121,9,1) 35%, rgba(0,255,25,1) 100%);
-background-repeat: no-repeat;
-background-attachment: fixed;
+body {
+  background-image: linear-gradient(112.1deg, rgba(32, 38, 57, 1) 11.4%, rgba(63, 76, 119, 1) 70.2%);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 
 
 }
 
+#image{
+  border-radius: 10%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 20px 20px 0 rgba(0, 0, 0, 0.19);
+}
+#image:hover {
+  width: 103%;
+  height: 103%;
+}
 
+#title{
+  text-shadow: 2px 2px 4px #000000;
+}
+#subtitle{
+  text-shadow: 2px 2px 4px #000000;
+}
